--- a/Lab2/epoll/index.html
+++ b/Lab2/epoll/index.html
@@ -2,9 +2,13 @@
 <html>
 <head lang="en">
 	<meta charset="utf-8">
+	<link href="./ico/favicon.ico" rel="Shortcut Icon" type="image/x-icon" />
+	<!-- <link rel="" href="./ico/title.ico" type="image/x-icon" /> -->
 	<title>something for nothing</title>
+	
 </head>
 <body>
 	<h1>测试</h1>
+	<img src="./ico/test.jpg"></img>
 </body>
 </html>
